--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
                     <div class="contact-item">
                         <div class="icon">💬</div>
                         <h3>WhatsApp</h3>
-                        <p>+57 315 369 3952</p>
+                        <p>+57 3165699145</p>
                         <p>Respuesta inmediata</p>
                     </div>
                     <div class="contact-item">
                         <div class="icon">📧</div>
                         <h3>Email</h3>
-                        <p>camilo.ortiz803@gmail.com</p>
+                        <p>code.tienda32@gmail.com</p>
                         <p>Respuesta en 24h</p>
                     </div>
                     <div class="contact-item">
@@ -206,4 +206,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
